ptucc_parser.output
Terminals unused in grammar

   TK_COMMON_CHARS
   TK_ESCAPE_CHARS
   TK_EOF


State 65 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce
State 158 conflicts: 2 shift/reduce


Grammar

    0 $accept: project $end

    1 project: program_declaration declarations main_body DOT

    2 program_declaration: TK_PROGRAM TK_IDENTIFIER SEMICOLON

    3 declarations: variable_declaration procedure_declaration function_declaration

    4 variable_declaration: %empty
    5                     | TK_VAR declares

    6 declares: var_declaration
    7         | declares var_declaration

    8 var_declaration: multi_identifiers COLON data_type SEMICOLON
    9                | multi_identifiers COLON array_declaration SEMICOLON

   10 array_declaration: TK_ARRAY TK_OF data_type
   11                  | TK_ARRAY array_size TK_OF data_type

   12 array_size: LEFT_BRACKET TK_POSITIVEINT RIGHT_BRACKET
   13           | array_size LEFT_BRACKET TK_POSITIVEINT RIGHT_BRACKET

   14 multi_identifiers: TK_IDENTIFIER
   15                  | multi_identifiers TK_COMMA TK_IDENTIFIER

   16 main_body: TK_BEGIN commands TK_END

   17 commands: %empty
   18         | simple_commands

   19 simple_commands: simple_command
   20                | simple_commands simple_command

   21 simple_nonsimple_commands: simple_command
   22                          | nonsimple_command

   23 simple_command: expressions SEMICOLON
   24               | TK_IDENTIFIER ASSIGNMENT TK_CONSTANT_STRING SEMICOLON
   25               | TK_IDENTIFIER ASSIGNMENT expressions SEMICOLON
   26               | TK_IDENTIFIER ASSIGNMENT boolean_value SEMICOLON
   27               | TK_IDENTIFIER ASSIGNMENT TK_READSTRING LEFT_PARENTHESIS RIGHT_PARENTHESIS SEMICOLON
   28               | TK_IDENTIFIER ASSIGNMENT TK_READINTEGER LEFT_PARENTHESIS RIGHT_PARENTHESIS SEMICOLON
   29               | TK_IDENTIFIER ASSIGNMENT TK_READREAL LEFT_PARENTHESIS RIGHT_PARENTHESIS SEMICOLON
   30               | TK_RESULT ASSIGNMENT expressions SEMICOLON
   31               | TK_WRITESTRING LEFT_PARENTHESIS TK_IDENTIFIER RIGHT_PARENTHESIS SEMICOLON
   32               | TK_WRITESTRING LEFT_PARENTHESIS TK_CONSTANT_STRING RIGHT_PARENTHESIS SEMICOLON
   33               | TK_WRITEINTEGER LEFT_PARENTHESIS TK_IDENTIFIER RIGHT_PARENTHESIS SEMICOLON
   34               | TK_WRITEREAL LEFT_PARENTHESIS TK_IDENTIFIER RIGHT_PARENTHESIS SEMICOLON
   35               | if_command
   36               | for_command
   37               | while_command
   38               | do_while_command
   39               | label
   40               | goto_label
   41               | TK_RETURN

   42 data_type: TK_INTEGER
   43          | TK_BOOLEAN
   44          | TK_CHAR
   45          | TK_REAL

   46 boolean_value: TK_TRUE
   47              | TK_FALSE

   48 nonsimple_command: TK_BEGIN simple_commands TK_END

   49 expressions: operators
   50            | expressions OP_OR expressions
   51            | LEFT_PARENTHESIS data_type RIGHT_PARENTHESIS operators
   52            | expressions TK_OR expressions
   53            | expressions OP_AND expressions
   54            | expressions TK_AND expressions
   55            | expressions OP_EQUAL expressions
   56            | expressions OP_NOTEQUAL expressions
   57            | expressions OP_LESS expressions
   58            | expressions OP_GREATER expressions
   59            | expressions OP_LESSEQUAL expressions
   60            | expressions OP_GREATEREQUAL expressions
   61            | OP_PLUS expressions
   62            | OP_MINUS expressions
   63            | expressions OP_MULT expressions
   64            | expressions OP_DIV expressions
   65            | expressions TK_DIV expressions
   66            | expressions TK_MOD expressions
   67            | expressions OP_PLUS expressions
   68            | expressions OP_MINUS expressions
   69            | TK_NOT expressions
   70            | OP_NOT expressions
   71            | LEFT_PARENTHESIS expressions RIGHT_PARENTHESIS
   72            | TK_IDENTIFIER LEFT_PARENTHESIS function RIGHT_PARENTHESIS
   73            | boolean_value

   74 operators: TK_POSITIVEREAL
   75          | TK_POSITIVEINT
   76          | TK_IDENTIFIER

   77 if_command: TK_IF expressions TK_THEN simple_nonsimple_commands else_tag

   78 for_command: TK_FOR TK_IDENTIFIER ASSIGNMENT expressions TK_TO expressions TK_DO simple_nonsimple_commands
   79            | TK_FOR TK_IDENTIFIER ASSIGNMENT expressions TK_DOWNTO expressions TK_DO simple_nonsimple_commands

   80 while_command: TK_WHILE expressions TK_DO simple_nonsimple_commands

   81 do_while_command: TK_REPEAT simple_nonsimple_commands TK_UNTIL expressions

   82 label: TK_IDENTIFIER COLON

   83 goto_label: TK_GOTO TK_IDENTIFIER SEMICOLON

   84 else_tag: %empty
   85         | TK_ELSE simple_nonsimple_commands

   86 function: %empty
   87         | expressions
   88         | function TK_COMMA expressions

   89 function_declaration: %empty
   90                     | function_declaration TK_FUNCTION TK_IDENTIFIER LEFT_PARENTHESIS parameters RIGHT_PARENTHESIS return_type SEMICOLON variable_declaration TK_BEGIN commands TK_END SEMICOLON

   91 procedure_declaration: %empty
   92                      | procedure_declaration TK_PROCEDURE TK_IDENTIFIER LEFT_PARENTHESIS parameters RIGHT_PARENTHESIS SEMICOLON test

   93 test: variable_declaration function_declaration TK_BEGIN commands TK_END SEMICOLON

   94 parameters: %empty
   95           | single_param
   96           | parameters SEMICOLON single_param

   97 single_param: multi_identifiers COLON data_type
   98             | multi_identifiers COLON array_declaration

   99 return_type: %empty
  100            | COLON data_type
  101            | COLON array_declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
TK_AND (258) 54
TK_ARRAY (259) 10 11
TK_BOOLEAN (260) 43
TK_CHAR (261) 44
TK_BEGIN (262) 16 48 90 93
TK_DIV (263) 65
TK_DO (264) 78 79 80
TK_ELSE (265) 85
TK_FOR (266) 78 79
TK_END (267) 16 48 90 93
TK_FUNCTION (268) 90
TK_GOTO (269) 83
TK_IF (270) 77
TK_INTEGER (271) 42
TK_VAR (272) 5
TK_MOD (273) 66
TK_NOT (274) 69
TK_OF (275) 10 11
TK_OR (276) 52
TK_WHILE (277) 80
TK_PROCEDURE (278) 92
TK_PROGRAM (279) 2
TK_REAL (280) 45
TK_REPEAT (281) 81
TK_TO (282) 78
TK_RESULT (283) 30
TK_RETURN (284) 41
TK_THEN (285) 77
TK_UNTIL (286) 81
TK_DOWNTO (287) 79
TK_TRUE (288) 46
TK_FALSE (289) 47
TK_READSTRING (290) 27
TK_READINTEGER (291) 28
TK_READREAL (292) 29
TK_WRITESTRING (293) 31 32
TK_WRITEINTEGER (294) 33
TK_WRITEREAL (295) 34
TK_IDENTIFIER (296) 2 14 15 24 25 26 27 28 29 31 33 34 72 76 78 79
    82 83 90 92
TK_POSITIVEINT (297) 12 13 75
TK_POSITIVEREAL (298) 74
TK_COMMON_CHARS (299)
TK_ESCAPE_CHARS (300)
TK_CONSTANT_STRING (301) 24 32
OP_PLUS (302) 61 67
OP_MINUS (303) 62 68
OP_MULT (304) 63
OP_DIV (305) 64
OP_EQUAL (306) 55
OP_NOTEQUAL (307) 56
OP_LESS (308) 57
OP_GREATER (309) 58
OP_LESSEQUAL (310) 59
OP_GREATEREQUAL (311) 60
OP_AND (312) 53
OP_OR (313) 50
OP_NOT (314) 70
ASSIGNMENT (315) 24 25 26 27 28 29 30 78 79
SEMICOLON (316) 2 8 9 23 24 25 26 27 28 29 30 31 32 33 34 83 90 92
    93 96
LEFT_PARENTHESIS (317) 27 28 29 31 32 33 34 51 71 72 90 92
RIGHT_PARENTHESIS (318) 27 28 29 31 32 33 34 51 71 72 90 92
TK_COMMA (319) 15 88
LEFT_BRACKET (320) 12 13
RIGHT_BRACKET (321) 12 13
COLON (322) 8 9 82 97 98 100 101
DOT (323) 1
TK_EOF (324)


Nonterminals, with rules where they appear

$accept (70)
    on left: 0
project (71)
    on left: 1, on right: 0
program_declaration (72)
    on left: 2, on right: 1
declarations (73)
    on left: 3, on right: 1
variable_declaration (74)
    on left: 4 5, on right: 3 90 93
declares (75)
    on left: 6 7, on right: 5 7
var_declaration (76)
    on left: 8 9, on right: 6 7
array_declaration (77)
    on left: 10 11, on right: 9 98 101
array_size (78)
    on left: 12 13, on right: 11 13
multi_identifiers (79)
    on left: 14 15, on right: 8 9 15 97 98
main_body (80)
    on left: 16, on right: 1
commands (81)
    on left: 17 18, on right: 16 90 93
simple_commands (82)
    on left: 19 20, on right: 18 20 48
simple_nonsimple_commands (83)
    on left: 21 22, on right: 77 78 79 80 81 85
simple_command (84)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41, on right: 19 20 21
data_type (85)
    on left: 42 43 44 45, on right: 8 10 11 51 97 100
boolean_value (86)
    on left: 46 47, on right: 26 73
nonsimple_command (87)
    on left: 48, on right: 22
expressions (88)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72 73, on right: 23 25 30 50 52 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67 68 69 70 71 77 78 79 80 81 87 88
operators (89)
    on left: 74 75 76, on right: 49 51
if_command (90)
    on left: 77, on right: 35
for_command (91)
    on left: 78 79, on right: 36
while_command (92)
    on left: 80, on right: 37
do_while_command (93)
    on left: 81, on right: 38
label (94)
    on left: 82, on right: 39
goto_label (95)
    on left: 83, on right: 40
else_tag (96)
    on left: 84 85, on right: 77
function (97)
    on left: 86 87 88, on right: 72 88
function_declaration (98)
    on left: 89 90, on right: 3 90 93
procedure_declaration (99)
    on left: 91 92, on right: 3 92
test (100)
    on left: 93, on right: 92
parameters (101)
    on left: 94 95 96, on right: 90 92 96
single_param (102)
    on left: 97 98, on right: 95 96
return_type (103)
    on left: 99 100 101, on right: 90


State 0

    0 $accept: . project $end
    1 project: . program_declaration declarations main_body DOT
    2 program_declaration: . TK_PROGRAM TK_IDENTIFIER SEMICOLON

    TK_PROGRAM  shift, and go to state 1

    project              go to state 2
    program_declaration  go to state 3


State 1

    2 program_declaration: TK_PROGRAM . TK_IDENTIFIER SEMICOLON

    TK_IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: project . $end

    $end  shift, and go to state 5


State 3

    1 project: program_declaration . declarations main_body DOT
    3 declarations: . variable_declaration procedure_declaration function_declaration
    4 variable_declaration: . %empty  [TK_BEGIN, TK_FUNCTION, TK_PROCEDURE]
    5                     | . TK_VAR declares

    TK_VAR  shift, and go to state 6

    $default  reduce using rule 4 (variable_declaration)

    declarations          go to state 7
    variable_declaration  go to state 8


State 4

    2 program_declaration: TK_PROGRAM TK_IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 9


State 5

    0 $accept: project $end .

    $default  accept


State 6

    5 variable_declaration: TK_VAR . declares
    6 declares: . var_declaration
    7         | . declares var_declaration
    8 var_declaration: . multi_identifiers COLON data_type SEMICOLON
    9                | . multi_identifiers COLON array_declaration SEMICOLON
   14 multi_identifiers: . TK_IDENTIFIER
   15                  | . multi_identifiers TK_COMMA TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 10

    declares           go to state 11
    var_declaration    go to state 12
    multi_identifiers  go to state 13


State 7

    1 project: program_declaration declarations . main_body DOT
   16 main_body: . TK_BEGIN commands TK_END

    TK_BEGIN  shift, and go to state 14

    main_body  go to state 15


State 8

    3 declarations: variable_declaration . procedure_declaration function_declaration
   91 procedure_declaration: . %empty
   92                      | . procedure_declaration TK_PROCEDURE TK_IDENTIFIER LEFT_PARENTHESIS parameters RIGHT_PARENTHESIS SEMICOLON test

    $default  reduce using rule 91 (procedure_declaration)

    procedure_declaration  go to state 16


State 9

    2 program_declaration: TK_PROGRAM TK_IDENTIFIER SEMICOLON .

    $default  reduce using rule 2 (program_declaration)


State 10

   14 multi_identifiers: TK_IDENTIFIER .

    $default  reduce using rule 14 (multi_identifiers)


State 11

    5 variable_declaration: TK_VAR declares .  [TK_BEGIN, TK_FUNCTION, TK_PROCEDURE]
    7 declares: declares . var_declaration
    8 var_declaration: . multi_identifiers COLON data_type SEMICOLON
    9                | . multi_identifiers COLON array_declaration SEMICOLON
   14 multi_identifiers: . TK_IDENTIFIER
   15                  | . multi_identifiers TK_COMMA TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 5 (variable_declaration)

    var_declaration    go to state 17
    multi_identifiers  go to state 13


State 12

    6 declares: var_declaration .

    $default  reduce using rule 6 (declares)


State 13

    8 var_declaration: multi_identifiers . COLON data_type SEMICOLON
    9                | multi_identifiers . COLON array_declaration SEMICOLON
   15 multi_identifiers: multi_identifiers . TK_COMMA TK_IDENTIFIER

    TK_COMMA  shift, and go to state 18
    COLON     shift, and go to state 19


State 14

   16 main_body: TK_BEGIN . commands TK_END
   17 commands: . %empty  [TK_END]
   18         | . simple_commands
   19 simple_commands: . simple_command
   20                | . simple_commands simple_command
   23 simple_command: . expressions SEMICOLON
   24               | . TK_IDENTIFIER ASSIGNMENT TK_CONSTANT_STRING SEMICOLON
   25               | . TK_IDENTIFIER ASSIGNMENT expressions SEMICOLON
   26               | . TK_IDENTIFIER ASSIGNMENT boolean_value SEMICOLON
   27               | . TK_IDENTIFIER ASSIGNMENT TK_READSTRING LEFT_PARENTHESIS RIGHT_PARENTHESIS SEMICOLON
   28               | . TK_IDENTIFIER ASSIGNMENT TK_READINTEGER LEFT_PARENTHESIS RIGHT_PARENTHESIS SEMICOLON
   29               | . TK_IDENTIFIER ASSIGNMENT TK_READREAL LEFT_PARENTHESIS RIGHT_PARENTHESIS SEMICOLON
   30               | . TK_RESULT ASSIGNMENT expressions SEMICOLON
   31               | . TK_WRITESTRING LEFT_PARENTHESIS TK_IDENTIFIER RIGHT_PARENTHESIS SEMICOLON
   32               | . TK_WRITESTRING LEFT_PARENTHESIS TK_CONSTANT_STRING RIGHT_PARENTHESIS SEMICOLON
   33               | . TK_WRITEINTEGER LEFT_PARENTHESIS TK_IDENTIFIER RIGHT_PARENTHESIS SEMICOLON
   34               | . TK_WRITEREAL LEFT_PARENTHESIS TK_IDENTIFIER RIGHT_PARENTHESIS SEMICOLON
   35               | . if_command
   36               | . for_command
   37               | . while_command
   38               | . do_while_command
   39               | . label
   40               | . goto_label
   41               | . TK_RETURN
   46 boolean_value: . TK_TRUE
   47              | . TK_FALSE
   49 expressions: . operators
   50            | . expressions OP_OR expressions
   51            | . LEFT_PARENTHESIS data_type RIGHT_PARENTHESIS operators
   52            | . expressions TK_OR expressions
   53            | . expressions OP_AND expressions
   54            | . expressions TK_AND expressions
   55            | . expressions OP_EQUAL expressions
   56            | . expressions OP_NOTEQUAL expressions
   57            | . expressions OP_LESS expressions
   58            | . expressions OP_GREATER expressions
   59            | . expressions OP_LESSEQUAL expressions
   60            | . expressions OP_GREATEREQUAL expressions
   61            | . OP_PLUS expressions
   62            | . OP_MINUS expressions
   63            | . expressions OP_MULT expressions
   64            | . expressions OP_DIV expressions
   65            | . expressions TK_DIV expressions
   66            | . expressions TK_MOD expressions
   67            | . expressions OP_PLUS expressions
   68            | . expressions OP_MINUS expressions
   69            | . TK_NOT expressions
   70            | . OP_NOT expressions
   71            | . LEFT_PARENTHESIS expressions RIGHT_PARENTHESIS
   72            | . TK_IDENTIFIER LEFT_PARENTHESIS function RIGHT_PARENTHESIS
   73            | . boolean_value
   74 operators: . TK_POSITIVEREAL
   75          | . TK_POSITIVEINT
   76          | . TK_IDENTIFIER
   77 if_command: . TK_IF expressions TK_THEN simple_nonsimple_commands else_tag
   78 for_command: . TK_FOR TK_IDENTIFIER ASSIGNMENT expressions TK_TO expressions TK_DO simple_nonsimple_commands
   79            | . TK_FOR TK_IDENTIFIER ASSIGNMENT expressions TK_DOWNTO expressions TK_DO simple_nonsimple_commands
   80 while_command: . TK_WHILE expressions TK_DO simple_nonsimple_commands
   81 do_while_command: . TK_REPEAT simple_nonsimple_commands TK_UNTIL expressions
   82 label: . TK_IDENTIFIER COLON
   83 goto_label: . TK_GOTO TK_IDENTIFIER SEMICOLON

    TK_FOR            shift, and go to state 20
    TK_GOTO           shift, and go to state 21
    TK_IF             shift, and go to state 22
    TK_NOT            shift, and go to state 23
    TK_WHILE          shift, and go to state 24
    TK_REPEAT         shift, and go to state 25
    TK_RESULT         shift, and go to state 26
    TK_RETURN         shift, and go to state 27
    TK_TRUE           shift, and go to state 28
    TK_FALSE          shift, and go to state 29
    TK_WRITESTRING    shift, and go to state 30
    TK_WRITEINTEGER   shift, and go to state 31
    TK_WRITEREAL      shift, and go to state 32
    TK_IDENTIFIER     shift, and go to state 33
    TK_POSITIVEINT    shift, and go to state 34
    TK_POSITIVEREAL   shift, and go to state 35
    OP_PLUS           shift, and go to state 36
    OP_MINUS          shift, and go to state 37
    OP_NOT            shift, and go to state 38
    LEFT_PARENTHESIS  shift, and go to state 39

    $default  reduce using rule 17 (commands)

    commands          go to state 40
    simple_commands   go to state 41
    simple_command    go to state 42
    boolean_value     go to state 43
    expressions       go to state 44
    operators         go to state 45
    if_command        go to state 46
    for_command       go to state 47
    while_command     go to state 48
    do_while_command  go to state 49
    label             go to state 50
    goto_label        go to state 51


State 15

    1 project: program_declaration declarations main_body . DOT

    DOT  shift, and go to state 52


State 16

    3 declarations: variable_declaration procedure_declaration . function_declaration
   89 function_declaration: . %empty  [TK_BEGIN, TK_FUNCTION]
   90                     | . function_declaration TK_FUNCTION TK_IDENTIFIER LEFT_PARENTHESIS parameters RIGHT_PARENTHESIS return_type SEMICOLON variable_declaration TK_BEGIN commands TK_END SEMICOLON
   92 procedure_declaration: procedure_declaration . TK_PROCEDURE TK_IDENTIFIER LEFT_PARENTHESIS parameters RIGHT_PARENTHESIS SEMICOLON test

    TK_PROCEDURE  shift, and go to state 53

    $default  reduce using rule 89 (function_declaration)

    function_declaration  go to state 54


State 17

    7 declares: declares var_declaration .

    $default  reduce using rule 7 (declares)


State 18

   15 multi_identifiers: multi_identifiers TK_COMMA . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 55


State 19

    8 var_declaration: multi_identifiers COLON . data_type SEMICOLON
    9                | multi_identifiers COLON . array_declaration SEMICOLON
   10 array_declaration: . TK_ARRAY TK_OF data_type
   11                  | . TK_ARRAY array_size TK_OF data_type
   42 data_type: . TK_INTEGER
   43          | . TK_BOOLEAN
   44          | . TK_CHAR
   45          | . TK_REAL
